# api/docs/swagger.yaml
@@ -1,7 +1,14 @@
 basePath: /api
 definitions:
+  handlers.CheckUserRequest:
+    properties:
+      device_identifier:
+        type: string
+    type: object
   handlers.CheckUserResponse:
     properties:
+      device_changed:
+        type: boolean
       register:
         type: boolean
     type: object
@@ -29,6 +36,11 @@ definitions:
       uid:
         type: string
     type: object
+  handlers.NewSessionRequest:
+    properties:
+      device_identifier:
+        type: string
+    type: object
   handlers.ProfileResponse:
     properties:
       message:
@@ -42,6 +54,8 @@ definitions:
     type: object
   handlers.RegisterUserRequest:
     properties:
+      device_identifier:
+        type: string
       twitter_id:
         type: string
       username:
@@ -77,7 +91,7 @@ definitions:
       solana_wallet:
         $ref: '#/definitions/handlers.WalletKeyPair'
     type: object
-host: localhost:3000
+host: localhost:3002
 info:
   contact:
     email: support@swagger.io
@@ -128,10 +142,18 @@ paths:
       tags:
       - apps
   /user/check:
-    get:
+    post:
       consumes:
       - application/json
-      description: Check if the authenticated user has registered before
+      description: Check if the authenticated user has registered before and if device
+        has changed
+      parameters:
+      - description: Check User Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.CheckUserRequest'
       produces:
       - application/json
       responses:
@@ -139,6 +161,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/handlers.CheckUserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
         "401":
           description: Unauthorized
           schema:
@@ -149,7 +175,47 @@ paths:
             $ref: '#/definitions/handlers.ErrorResponse'
       security:
       - Bearer: []
-      summary: Check if user exists
+      summary: Check if user exists and device matches
+      tags:
+      - user
+  /user/new-session:
+    post:
+      consumes:
+      - application/json
+      description: Update device identifier for existing user and return wallet information
+      parameters:
+      - description: New Session Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.NewSessionRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.RegisterUserResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - Bearer: []
+      summary: Create new session with updated device
       tags:
       - user
   /user/profile:
